# POIP

./: .gitignore  CMakeLists.txt  README.md  setup.py
python/: Naif.py  Resolution.py  WarehouseLoader.py  WarehouseSolution.py  checker.py  main.py  modele1.py  solution.py  statistique.ipynb  statistique.py  test.ipynb
solutions/: warehouse_toy_Naif_010.sol
src/: WarehouseLoader.cpp  bindings.cpp  main.cpp  mylib.cpp  warehouseLoader.hpp
